--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -1,65 +1,20 @@
 {
-    "env": {
-      "browser": true,
-      "es2021": true
-    },
-    "extends": [
-      "eslint:recommended",
-      "plugin:react/recommended",
-      "plugin:@typescript-eslint/recommended",
-      "prettier" // Add this line!
-    ],
-    "overrides": [],
-    "parser": "@typescript-eslint/parser",
-    "parserOptions": {
-      "ecmaVersion": "latest",
-      "sourceType": "module"
-    },
-    "plugins": ["react", "react-hooks", "@typescript-eslint", "prettier", "import"],
-    "rules": {
-      "react/react-in-jsx-scope": "off",
-      "spaced-comment": "error",
-      "quotes": ["error", "single"],
-      "no-duplicate-imports": "error",
-      "arrow-body-style": ["error", "as-needed"],
-      "no-restricted-imports": [
-        "error",
-        {
-          "patterns": ["../"]
-        }
-      ],
-      "import/order": [
-        "error",
-        {
-          "groups": ["builtin", "external", "parent", "sibling", "index", "object", "type"],
-          "pathGroups": [
-            {
-              "pattern": "@**",
-              "group": "parent",
-              "position": "before"
-            }
-          ],
-          "alphabetize": { "order": "asc" }
-        }
-      ],
-      "@typescript-eslint/consistent-type-imports": [
-        "error",
-        {
-          "prefer": "type-imports"
-        }
-      ],
-      "react/self-closing-comp": [
-        "error",
-        {
-          "component": true,
-          "html": true
-        }
-      ]
-    },
-    "settings": {
-      "import/resolver": {
-        "typescript": {}
-      }
-    }
+  "env": {
+    "browser": true,
+    "es2021": true
+  },
+  "extends": [
+    "eslint:recommended",
+    "plugin:react/recommended",
+    "plugin:prettier/recommended"
+  ],
+  "overrides": [],
+  "parserOptions": {
+    "ecmaVersion": "latest",
+    "sourceType": "module"
+  },
+  "plugins": ["react"],
+  "rules": {
+    "react/react-in-jsx-scope": "off"
   }
-  
+}
