--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,9 @@
     "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.17.1",
+    "@tanstack/react-query-devtools": "^4.17.1",
+    "axios": "^1.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
