--- a/client/package.json
+++ b/client/package.json
@@ -12,11 +12,14 @@
     "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.0",
     "@tanstack/react-query": "^4.17.1",
     "@tanstack/react-query-devtools": "^4.17.1",
     "axios": "^1.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.39.5",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
     "styled-components": "^5.3.6"
   },
