--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.9.10",
     "@reduxjs/toolkit": "^1.9.0",
     "@tanstack/react-query": "^4.17.1",
     "@tanstack/react-query-devtools": "^4.17.1",
@@ -21,7 +22,8 @@
     "react-hook-form": "^7.39.5",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.6",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/react": "^18.0.24",
