--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-icons": "^4.7.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
+    "react-uuid": "^2.0.0",
     "styled-components": "^5.3.6",
     "yup": "^0.32.11"
   },
