--- a/client/jsconfig.json
+++ b/client/jsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "jsx": "preserve",
+    "target": "es6",
     "baseUrl": "./src",
     "paths": {
       "@/*": ["./src/*"]
