--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@hookform/resolvers": "^2.9.10",
     "@reduxjs/toolkit": "^1.9.0",
+    "@styled-system/should-forward-prop": "^5.1.5",
     "@tanstack/react-query": "^4.17.1",
     "@tanstack/react-query-devtools": "^4.18.0",
     "axios": "^1.2.0",
