--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,10 @@
     "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@hookform/resolvers": "^2.9.10",
+    "@mui/material": "^5.11.0",
     "@reduxjs/toolkit": "^1.9.0",
     "@styled-system/should-forward-prop": "^5.1.5",
     "@tanstack/react-query": "^4.17.1",
