--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "@tanstack/react-query": "^4.17.1",
     "@tanstack/react-query-devtools": "^4.18.0",
     "axios": "^1.2.0",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.40.0",
