--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "@tanstack/react-query": "^4.17.1",
     "@tanstack/react-query-devtools": "^4.18.0",
     "axios": "^1.2.0",
+    "framer-motion": "^8.0.2",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -29,6 +30,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
     "react-uuid": "^2.0.0",
+    "redux-persist": "^6.0.0",
     "styled-components": "^5.3.6",
     "yup": "^0.32.11"
   },
