--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.2.0",
     "framer-motion": "^8.0.2",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.40.0",
