--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@emotion/styled": "^11.10.5",
     "@hookform/resolvers": "^2.9.10",
     "@mui/material": "^5.11.0",
+    "@mui/x-date-pickers": "^5.0.12",
     "@reduxjs/toolkit": "^1.9.0",
     "@styled-system/should-forward-prop": "^5.1.5",
     "@tanstack/react-query": "^4.17.1",
