--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "framer-motion": "^8.0.2",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
+    "lodash.debounce": "^4.0.8",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
