Change color tweet input + is hot user + user card info

--- a/.env.development.local
+++ b/.env.development.local
@@ -1,10 +1,18 @@
 # api origin
-VITE_REACT_APP_API_ORIGIN="http://localhost:9002/"
+
+VITE_REACT_APP_API_ORIGIN="http://cardinalis-be.live/"
 
 # user api endpoint
 VITE_REACT_APP_REGISTER_ENDPOINT="user/register"
 VITE_REACT_APP_LOGIN_ENDPOINT="user/login"
 VITE_REACT_APP_LOGOUT_ENDPOINT="user/logout"
 VITE_REACT_APP_USER_ENDPOINT="user"
+VITE_REACT_APP_GET_USER_ENDPOINT="user/fetch/"
+VITE_REACT_APP_SEARCH_USER_ENDPOINT="user/search"
+VITE_REACT_APP_USER_FOLLOW_ENDPOINT="follow/"
+VITE_REACT_APP_USER_FOLLOWER_ENDPOINT="/followers"
+VITE_REACT_APP_USER_FOLLOWING_ENDPOINT="/following"
 
 # tweet api endpoint
+VITE_REACT_APP_TWEET_ENDPOINT ="tweets"
+VITE_REACT_APP_TWEET_DETAIL_ENDPOINT="tweet"
