Fix search, load explore tweets, load tweet by user

--- a/.env.development.local
+++ b/.env.development.local
@@ -16,3 +16,4 @@ VITE_REACT_APP_USER_FOLLOWING_ENDPOINT="/following"
 # tweet api endpoint
 VITE_REACT_APP_TWEET_ENDPOINT ="tweets"
 VITE_REACT_APP_TWEET_DETAIL_ENDPOINT="tweet"
+VITE_REACT_APP_EXPLORE_TWEET_ENDPOINT_EXPLORE"explore/tweets"
